# vpn

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  VPN项目工作计划.md  ping_connectivity_fix_final.md  ping_connectivity_fix_final_v2.md  test_ping_fix.md  第三方库收集指南.md
cmake/: ThirdParty.cmake
config/: client-linux.json.example  client.json.example  server.json  server.json.example
docs/: ecdh-usage-example.md  libsodium-installation.md  libsodium-migration.md  linux-client-usage.md  server-usage.md
docs/todo/: security-checklist.md  security-improvement-plan.md
include/client/: config_manager.h  linux_tun_interface.h  linux_vpn_client.h  web_server.h  windows_service.h  windows_tap_interface.h  windows_vpn_client.h
include/common/: config_manager.h  secure_protocol.h  web_server.h
include/crypto/: crypto.h  key_exchange.h
include/server/: client_session.h  packet_router.h  server_config.h  tun_interface.h  vpn_server.h
scripts/: setup_dependencies.bat  setup_dependencies.sh
src/: CMakeLists.txt
src/client/linux/: CMakeLists.txt  linux_tun_interface.cpp  linux_vpn_client.cpp  main.cpp
src/client/windows/: CMakeLists.txt  config_manager.cpp  main.cpp  resource.rc  web_server.cpp  windows_service.cpp  windows_tap_interface.cpp  windows_vpn_client.cpp
src/common/: CMakeLists.txt  config_manager.cpp  secure_protocol.cpp  web_server.cpp
src/crypto/: CMakeLists.txt  aes256gcm.cpp  crypto_context.cpp  crypto_utils.cpp  ecdh.cpp  key_derivation.cpp  key_exchange_protocol.cpp  secure_buffer.cpp  secure_random.cpp  sha256.cpp
src/server/: CMakeLists.txt  client_session.cpp  main.cpp  packet_router.cpp  server_config.cpp  tun_interface.cpp  vpn_server.cpp
tests/: CMakeLists.txt  README.md  test_crypto.cpp  test_ecdh_performance.cpp  test_ecdh_security.cpp  test_ecdh_vectors.cpp  test_handshake_manual.cpp  test_key_derivation_vectors.cpp  test_key_exchange.cpp  test_server_components.cpp  test_sha256_vectors.cpp
